<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Map">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_myplaces"
                android:title="@string/menu_myplaces" />

            <item
                android:id="@+id/nav_loc"
                android:icon="@drawable/ic_menu_location"
                android:title="@string/menu_loc" />

            <item
                android:id="@+id/nav_compas"
                android:icon="@drawable/ic_menu_compas"
                android:title="@string/menu_compas" />

        </menu>
    </item>

</menu>
